# UseLatexMk

./: CMakeLists.txt  FindLatexMk.cmake  README.md  TODO.md  UseLatexMk.cmake  latexmkrc.cmake
.github/workflows/: ci.yml
doc/: customcommand-changelog.md  latexmk-changelog.md
test/: CMakeLists.txt  minted.tex  simple.tex  testdriver.sh  withinclude.tex
test/nested/: include.tex
